Created app module to wrap all the app

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Freelance Bootcamp</title>
+    <title>FreelanceLTX</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,6 +15,6 @@
   </head>
 
   <body>
-    <main-app>App Loading...</main-app>
+    <app>App Loading...</app>
   </body>
 </html>
