--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Freelance Bootcamp</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="app/styles/style.css" />
     <link rel="stylesheet" href="/css/master.css">
 
     <script src="node_modules/core-js/client/shim.min.js"></script>
